添加所有的表对应实体和表单校验规则
