# backend/go_gateway_demo/controller/admin_login.go
@@ -18,18 +18,19 @@ type AdminLoginController struct {
 func AdminLoginRegister(group *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
 	group.POST("/login", adminLogin.AdminLogin)
+	group.GET("/logout", adminLogin.AdminLogout)
 }
 
-// AdminLogin go doc
-// @Summary 管理员登录
-// @Description 管理员登录
-// @Tags 管理员接口
-// @ID /admin_login/login
-// @Accept json
-// @Produce json
-// @param payload body dto.AdminLoginInput true "body"
-// Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
-// @Router /admin_login/login [post]
+// AdminLogin godoc
+// @Summary      管理员登录
+// @Description  管理员登录
+// @Tags         管理员接口
+// @ID           /admin_login/login
+// @Accept       json
+// @Produce      json
+// @Param        body  body  dto.AdminLoginInput  true  "body"
+// @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
+// @Router       /admin_login/login [post]
 func (adminlogin *AdminLoginController) AdminLogin(ctx *gin.Context) {
 	params := &dto.AdminLoginInput{}
 	if err := params.BindValidParam(ctx); err != nil {
@@ -44,7 +45,7 @@ func (adminlogin *AdminLoginController) AdminLogin(ctx *gin.Context) {
 	// 2. admininfo.salt + params.Password => saltPassword
 	// 3. saltPassword == admininfo.password?
 	admin := &dao.Admin{}
-	admin, err = admin.LoginCheck(ctx, tx, params)
+	admin, err = admin.LoginCheck(tx, params)
 	if err != nil {
 		middleware.ResponseError(ctx, 2002, err)
 		return
@@ -63,8 +64,25 @@ func (adminlogin *AdminLoginController) AdminLogin(ctx *gin.Context) {
 	}
 	session := sessions.Default(ctx)
 	session.Set(public.AdminSessionInfoKey, string(sessBts))
+	session.Set("login_test_session", "hhh")
 	session.Save()
 
 	out := &dto.AdminLoginOutput{Token: admin.UserName}
 	middleware.ResponseSuccess(ctx, out)
+}
+
+// AdminLogout godoc
+// @Summary      管理员登出
+// @Description  管理员登出
+// @Tags         管理员接口
+// @ID           /admin_login/logout
+// @Accept       json
+// @Produce      json
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router       /admin_login/logout [get]
+func (adminlogin *AdminLoginController) AdminLogout(ctx *gin.Context) {
+	sess := sessions.Default(ctx)
+	sess.Delete(public.AdminSessionInfoKey)
+	sess.Save()
+	middleware.ResponseSuccess(ctx, "")
 }
