# backend/go_gateway_demo/controller/service.go
@@ -1,0 +1,182 @@
+package controller
+
+import (
+	"errors"
+	"fmt"
+	"github.com/WHITE-ILMARE/go_gateway/backend/go_gateway_demo/dao"
+	"github.com/WHITE-ILMARE/go_gateway/backend/go_gateway_demo/dto"
+	"github.com/WHITE-ILMARE/go_gateway/backend/go_gateway_demo/middleware"
+	"github.com/WHITE-ILMARE/go_gateway/backend/go_gateway_demo/public"
+	"github.com/e421083458/golang_common/lib"
+	"github.com/gin-gonic/gin"
+	"strings"
+)
+
+type ServiceController struct {
+}
+
+func ServiceRegister(group *gin.RouterGroup) {
+	service := &ServiceController{}
+	group.GET("/service_list", service.ServiceList)
+	group.GET("/service_delete", service.ServiceDelete)
+	group.POST("/service_add_http", service.ServiceAddHTTP)
+}
+
+// ServiceList go doc
+// @Summary      服务列表
+// @Description  服务列表
+// @Tags         服务管理
+// @ID           /service/service_list
+// @Produce      json
+// @Param info query string false "关键词"
+// @Param page_size query int true "每页个数"
+// @Param page_no query int true "当前页数"
+// @Success 200 {object} middleware.Response{data=dto.ServiceListOutput} "success"
+// @Router       /service/service_list [get]
+func (service *ServiceController) ServiceList(ctx *gin.Context) {
+	params := &dto.ServiceListInput{}
+	if err := params.BindValidParam(ctx); err != nil {
+		middleware.ResponseError(ctx, 2000, err)
+		return
+	}
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(ctx, 2001, err)
+		return
+	}
+	// 从db中分页读取基本信息
+	serviceInfo := &dao.ServiceInfo{}
+	list, total, err := serviceInfo.PageList(tx, params)
+	if err != nil {
+		middleware.ResponseError(ctx, 2002, err)
+		return
+	}
+	// 格式化输出信息
+	outList := []dto.ServiceListItemOutput{}
+	for _, listItem := range list {
+		serviceDetail, err := listItem.ServiceDetail(tx, &listItem)
+		if err != nil {
+			middleware.ResponseError(ctx, 2003, err)
+			return
+		}
+		// 1. http后缀接入 clusterIP + clusterPort + path
+		// 2. http域名接入 domain
+		// 3. tcp,grpc接入 clusterIP+servicePort
+		serviceAddr := "unknown"
+		clusterIP := lib.GetStringConf("base.cluster.cluster_ip")
+		clusterPort := lib.GetStringConf("base.cluster.cluster_port")
+		clusterSSLPort := lib.GetStringConf("base.cluster.cluster_ssl_port")
+		if serviceDetail.Info.LoadType == public.LoadTypeHTTP &&
+			serviceDetail.HTTPRule.RuleType == public.HTTPRuleTypePrefixURL &&
+			serviceDetail.HTTPRule.NeedHttps == 1 {
+			serviceAddr = fmt.Sprintf("%s:%s%s", clusterIP, clusterSSLPort, serviceDetail.HTTPRule.Rule)
+		}
+
+		if serviceDetail.Info.LoadType == public.LoadTypeHTTP &&
+			serviceDetail.HTTPRule.RuleType == public.HTTPRuleTypePrefixURL &&
+			serviceDetail.HTTPRule.NeedHttps == 0 {
+			serviceAddr = fmt.Sprintf("%s:%s%s", clusterIP, clusterPort, serviceDetail.HTTPRule.Rule)
+		}
+		if serviceDetail.Info.LoadType == public.LoadTypeHTTP &&
+			serviceDetail.HTTPRule.RuleType == public.HTTPRuleTypeDomain {
+			serviceAddr = serviceDetail.HTTPRule.Rule
+		}
+		if serviceDetail.Info.LoadType == public.LoadTypeTCP {
+			serviceAddr = fmt.Sprintf("%s:%d", clusterIP, serviceDetail.TCPRule.Port)
+		}
+		if serviceDetail.Info.LoadType == public.LoadTypeGRPC {
+			serviceAddr = fmt.Sprintf("%s:%d", clusterIP, serviceDetail.GRPCRule.Port)
+		}
+		ipList := serviceDetail.LoadBalance.GetIPListByModel()
+		outItem := dto.ServiceListItemOutput{
+			ID:          listItem.ID,
+			ServiceName: listItem.ServiceName,
+			ServiceDesc: listItem.ServiceDesc,
+			ServiceAddr: serviceAddr,
+			Qpd:         0,
+			Qps:         0,
+			TotalNode:   len(ipList),
+		}
+		outList = append(outList, outItem)
+	}
+
+	out := &dto.ServiceListOutput{
+		Total: total,
+		List:  outList,
+	}
+	middleware.ResponseSuccess(ctx, out)
+}
+
+// ServiceDelete go doc
+// @Summary      服务删除
+// @Description  服务删除
+// @Tags         服务管理
+// @ID           /service/service_delete
+// @Produce      json
+// @Param id query string true "服务ID"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router       /service/service_delete [get]
+func (service *ServiceController) ServiceDelete(ctx *gin.Context) {
+	params := &dto.ServiceDeleteInput{}
+	if err := params.BindValidParam(ctx); err != nil {
+		middleware.ResponseError(ctx, 2000, err)
+		return
+	}
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(ctx, 2001, err)
+		return
+	}
+	// 读取服务基本信息
+	serviceInfo := &dao.ServiceInfo{ID: params.ID}
+	serviceInfo, err = serviceInfo.Find(tx, serviceInfo)
+	if err != nil {
+		middleware.ResponseError(ctx, 2002, err)
+		return
+	}
+	serviceInfo.IsDelete = 1
+	if err = serviceInfo.Save(tx); err != nil {
+		middleware.ResponseError(ctx, 2003, err)
+		return
+	}
+	middleware.ResponseSuccess(ctx, "")
+}
+
+// ServiceAddHTTP go doc
+// @Summary      添加HTTP服务
+// @Description  添加HTTP服务
+// @Tags         服务管理
+// @ID           /service/service_add_http
+// @Produce      json
+// @Param body body dto.ServiceAddHTTPInput true "body"
+// @Success 200 {object} middleware.Response{data=string} "success"
+// @Router       /service/service_add_http [post]
+func (serviceController *ServiceController) ServiceAddHTTP(ctx *gin.Context) {
+	params := &dto.ServiceAddHTTPInput{}
+	if err := params.BindValidParam(ctx); err != nil {
+		middleware.ResponseError(ctx, 2000, err)
+		return
+	}
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(ctx, 2001, err)
+		return
+	}
+	serviceInfo := &dao.ServiceInfo{}
+	if _, err = serviceInfo.Find(tx, serviceInfo); err == nil {
+		middleware.ResponseError(ctx, 2002, errors.New("服务已存在"))
+		return
+	}
+	// 基于数据库的校验
+	httpUrl := &dao.HttpRule{RuleType: params.RuleType, Rule: params.Rule}
+	if _, err := httpUrl.Find(tx, httpUrl); err == nil {
+		middleware.ResponseError(ctx, 2003, errors.New("服务接入前缀或域名已存在"))
+		return
+	}
+	// 跨字段的校验
+	if len(strings.Split(params.IpList, "\n")) != len(strings.Split(params.WeightList, "\n")) {
+		middleware.ResponseError(ctx, 2004, errors.New("IP列表与权重列表数量不一致"))
+		return
+	}
+	middleware.ResponseSuccess(ctx, "")
+}
