# backend/go_gateway_demo/dto/admin_login.go
@@ -14,8 +14,8 @@ type AdminSessionInfo struct {
 
 // AdminLoginInput tag中，json是结构体转json时的字段名，form指定json转结构体的字段名，二者是相反的关系
 type AdminLoginInput struct {
-	UserName string `json:"username" form:"username" comment:"姓名" example:"admin" validate:"required,is_valid_username"` // 管理员用户名
-	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`                  // 管理员密码
+	UserName string `json:"username" form:"username" comment:"姓名" example:"admin" validate:"required,valid_username"` // 管理员用户名
+	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`               // 管理员密码
 }
 
 func (param *AdminLoginInput) BindValidParam(c *gin.Context) error {
